--- a/StuV.Http/StuV.Http.csproj
+++ b/StuV.Http/StuV.Http.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Version>0.1.0</Version>
+    <Authors>yamamo</Authors>
+    <Company>yamamoWorks</Company>
+    <RepositoryUrl></RepositoryUrl>
+    <PackageProjectUrl>https://github.com/yamamoWorks/StuV.Http</PackageProjectUrl>
+    <Copyright>© 2020 yamamo</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
