--- a/StuV.Http/StuV.Http.csproj
+++ b/StuV.Http/StuV.Http.csproj
@@ -3,17 +3,22 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.1.0</Version>
+    <Version>0.2.0</Version>
     <Authors>yamamo</Authors>
     <Company>yamamoWorks</Company>
-    <RepositoryUrl></RepositoryUrl>
+    <RepositoryUrl>https://github.com/yamamoWorks/StuV.Http</RepositoryUrl>
     <PackageProjectUrl>https://github.com/yamamoWorks/StuV.Http</PackageProjectUrl>
     <Copyright>© 2020 yamamo</Copyright>
+    <AssemblyVersion>0.2.0.0</AssemblyVersion>
+    <Description>Simple http stub server for unit test.</Description>
+    <PackageTags>Stub UnitTest C#</PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.WebApiCompatShim" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.2" />
   </ItemGroup>
