--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -2,8 +2,10 @@ name: .NET Core
 
 on:
   push:
-    branches: master
-    tags: v*
+    branches:
+      - master
+    tags:
+      - v*
 
 jobs:
   build:
